Implemented portal backend modules